Icon button fix and link alignment (#744)
* Fix error in IconButton Fragment issue

* Link alignment - inline abilities

* PR fixes

* https://github.com/mondaycom/monday-ui-react-core/pull/744 request

--- a/src/components/Link/Link.scss
+++ b/src/components/Link/Link.scss
@@ -16,6 +16,14 @@
       text-decoration: underline;
     }
   }
+  &.inline-text {
+    display: inline-flex;
+    align-items: unset;
+  }
+  &.inherit-font-size {
+    font-size: inherit;
+    line-height: inherit;
+  }
   &--icon-start {
     line-height: 24px;
     margin-right: $spacing-small;
